--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-autosave": "^0.4.4",
     "react-dom": "^18",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.2"
