Refactor project structure to include AI analysis functionality

--- a/.env.template
+++ b/.env.template
@@ -6,5 +6,8 @@ CLERK_SECRET_KEY=YOUR_CLERK_SECRET_KEY
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
-# https://console.neon.tech/app/projects/
+# You can use Neon, Supabase, or any other database
 DATABASE_URL='YOUR_NEON_DATABASE_URL'
+
+# https://platform.openai.com/api-keys (You can use any LLM API key of your preference)
+OPENAI_API_KEY=YOUR_OPENAI_API_KEY
