--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,8 @@
+# Docker Postgres Database
+DB_USER=postgres
+DB_NAME=teslacel-shop
+DB_PASSWORD=123456
+
 # https://dashboard.clerk.com/
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=YOUR_CLERK_PUBLISHABLE_KEY
 CLERK_SECRET_KEY=YOUR_CLERK_SECRET_KEY
@@ -5,6 +10,9 @@ CLERK_SECRET_KEY=YOUR_CLERK_SECRET_KEY
 # https://clerk.com/docs/deployments/clerk-environment-variables#clerk-environment-variables
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+
+# Local database URL with Docker
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
 # You can use Neon, Supabase, or any other database
 DATABASE_URL='YOUR_NEON_DATABASE_URL'
