--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 #postgresql
-/postgres/
+/postgres
 
 # dependencies
 /node_modules
